# fastwoe

./: .gitignore  Cargo.toml  METRICS_COMPARISON.md  README.md  RUST_BEST_PRACTICES.md  RUST_PYO3_ACTUALIZATION_REPORT.md  clippy.toml  fastwoe.ipynb  pyproject.toml  rust-toolchain.toml
.github/workflows/: benchmarks.yml  ci.yml  wheels.yml
crates/fastwoe-core/: Cargo.toml
crates/fastwoe-core/benches/: woe_simulation.rs
crates/fastwoe-core/src/: lib.rs
crates/fastwoe-py/: Cargo.toml
crates/fastwoe-py/src/: lib.rs
docs/parity/: PHASE0_PARITY_SPEC.md
docs/performance/: BENCHMARK_DATASETS_AND_THRESHOLDS.md  FAISS_DECISION_BENCHMARK.md  PREPROCESSOR_MEMORY_BENCHMARK.md
docs/release/: MIGRATION_AND_LIMITATIONS.md  RELEASE_CHECKLIST.md  RELEASE_NOTES_0.1.2.md  RELEASE_NOTES_0.1.9.md
docs/validation/: ASSUMPTIONS_AND_LIMITATIONS.md
python/fastwoe/: __init__.py  model.py  preprocessor.py
scripts/: README.md  repro_ci_local.sh  simulation_benchmark.py
tests/: test_assumption_risk_warnings.py  test_bayes_woe_consistency.py  test_credit_scoring_monotonic_compliance.py  test_faiss_memory_regression_tool.py  test_input_validation.py  test_invariants.py  test_memory_threshold_tools.py  test_multiclass_probability_contract.py  test_phase0_parity_contract.py  test_preprocessor.py  test_row_representations.py  test_sparse_bin_inference_stability.py  test_statistical_accuracy.py
tests/fixtures/parity/: phase0_v1.json
tools/: benchmark_faiss_decision.py  benchmark_preprocessor_memory.py  benchmark_real_dataset.py  check_benchmark_thresholds.py  check_faiss_memory_regression.py  check_faiss_regression.py  check_preprocessor_latency_thresholds.py  check_preprocessor_memory_thresholds.py  generate_phase0_fixtures.py
