[build-system]
requires = ["maturin>=1.7,<2.0"]
build-backend = "maturin"

[project]
name = "fastwoe-rs"
version = "0.1.7"
description = "Rust + PyO3 implementation scaffold for FastWOE."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "numpy>=1.24",
    "pandas>=1.5",
]
license = { text = "MIT" }
authors = [{ name = "fastwoe contributors" }]
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.7",
    "mypy>=1.11",
]
faiss = [
    "faiss-cpu>=1.8; platform_system == 'Linux'",
]

[tool.maturin]
manifest-path = "crates/fastwoe-py/Cargo.toml"
python-source = "python"
module-name = "fastwoe.fastwoe_rs"
features = []

[tool.ruff]
target-version = "py39"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "W"]
